# Mathdoku

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  codecov.yml  index.html  release-plz.toml  rust-toolchain.toml  site.css
.githooks/: pre-commit
adr/: 0001-without-solution-mode.md  0002-wasm-web-preview.md  0003-monorepo-workspace-structure.md  0006-collinear-distinctness-memo.md  0007-help-system.md  0008-dual-value-position-model.md
apps/designer/: Cargo.toml  README.md  index.html
apps/designer/core/: Cargo.toml
apps/designer/core/src/: help.rs  lib.rs  test_support.rs
apps/designer/e2e/: eslint.config.mjs  package.json  playwright.web.config.ts  tsconfig.json
apps/designer/e2e/tests/: cage_stats.test.ts  grid_render.test.ts  helpers.ts  new_puzzle_modal.test.ts  provisional_cage.test.ts  size_modal_focus.test.ts  solution_count.test.ts  tab_navigation.test.ts  tooltip_namespace.test.ts  unsaved_modal_focus.test.ts  without_solution.test.ts
apps/designer/e2e/tests-web/: editor_flow.test.ts  tooltips.test.ts
apps/designer/src/: app.rs  cage_commit.rs  feasibility.rs  geometry.rs  help.rs  ipc.rs  main.rs  partial_solution.rs  web_shims.rs  web_state.rs
apps/designer/src-tauri/: Cargo.toml  tauri.conf.json
apps/designer/src-tauri/capabilities/: default.json
apps/designer/src-tauri/src/: commands.rs  lib.rs
apps/designer/src/components/: cage_stats.rs  cell.rs  mod.rs  operation_selector.rs  puzzle.rs  solution_count.rs
main/: index.html  mathdoku-designer-ui-27c47c6f2f3f7482_bg.wasm  mathdoku-designer-ui-28a3396fd60405b1_bg.wasm  mathdoku-designer-ui-3ed36c1589ed170b.js  mathdoku-designer-ui-3ed36c1589ed170b_bg.wasm  mathdoku-designer-ui-497987e1f2fae49e_bg.wasm  mathdoku-designer-ui-51cd26159858c4ba_bg.wasm  mathdoku-designer-ui-795b478800d25fb9_bg.wasm  mathdoku-designer-ui-79dd18d15acd5d8c_bg.wasm  mathdoku-designer-ui-7d24b1ec78973ff1_bg.wasm  mathdoku-designer-ui-881fcf00bef1e410_bg.wasm  mathdoku-designer-ui-8953bb913e4bc75a_bg.wasm  mathdoku-designer-ui-9873a72d7a537c6d_bg.wasm  mathdoku-designer-ui-994e1521d3acabe9_bg.wasm  mathdoku-designer-ui-9d8a357617a90f6d_bg.wasm  mathdoku-designer-ui-a93cc44352566887.js  mathdoku-designer-ui-a93cc44352566887_bg.wasm  mathdoku-designer-ui-c24bbd07ac55f77b_bg.wasm  mathdoku-designer-ui-eca289d9108311ed_bg.wasm  styles-a56bc13bda7ae862.css
mathdoku/: CHANGELOG.md  Cargo.toml  README.md
mathdoku-designer/: Cargo.toml  README.md
mathdoku/src/: arithmetic.rs  cage.rs  cage_fill.rs  cell.rs  csp.rs  error.rs  generate.rs  grid.rs  grid_csp.rs  latin_square.rs  lib.rs  mdd.rs  memo.rs  my_mdd.rs  old_grid_csp.rs  operation.rs  operator.rs  polyomino.rs  puzzle.rs  puzzle_csp.rs  regin.rs  solutions.rs  table.rs  test_util.rs  test_utils.rs  tuples.rs
mathdoku/src/cs/: all_different.rs  constraint.rs  mod.rs  solver.rs
mathdoku/src/generator/: generate.rs  latin_square.rs  mod.rs
mathdoku/src/mdk/: binary_memo.rs  cage.rs  csp.rs  domino_memo.rs  domino_table.rs  fill.rs  grid.rs  mdd.rs  memo.rs  mod.rs  old_cage.rs  old_mdd.rs  old_memo.rs  operation.rs  operator.rs  polyomino.rs  puzzle.rs  regin.rs  shape.rs  table.rs  trie.rs  tuples.rs
mathdoku/src/puzzle/: arithmetic.rs  cache.rs  cage.rs  cover.rs  mod.rs  operation.rs  polyomino.rs  slot.rs  store.rs  types.rs  variable.rs
pr-101/: index.html  mathdoku-designer-ui-9cc45fdcf12a963c.js  mathdoku-designer-ui-9cc45fdcf12a963c_bg.wasm
pr-102/: index.html
pr-105/: index.html
pr-106/: index.html  mathdoku-designer-ui-ba2bac7078c5a6b5_bg.wasm
pr-107/: index.html  mathdoku-designer-ui-b4fd9c990a352b71.js  mathdoku-designer-ui-b4fd9c990a352b71_bg.wasm  mathdoku-designer-ui-e91ab8a103ef077b_bg.wasm
pr-109/: index.html
pr-110/: index.html  mathdoku-designer-ui-7d24b1ec78973ff1.js
pr-111/: index.html  mathdoku-designer-ui-8953bb913e4bc75a.js
pr-112/: index.html  mathdoku-designer-ui-73ea372c5655249.js  mathdoku-designer-ui-73ea372c5655249_bg.wasm
pr-114/: index.html
pr-115/: index.html  mathdoku-designer-ui-afdfccc132d43441_bg.wasm
pr-116/: index.html
pr-117/: index.html
pr-118/: index.html
pr-119/: index.html
pr-120/: index.html  mathdoku-designer-ui-28a3396fd60405b1.js
pr-121/: index.html
pr-122/: index.html
pr-123/: index.html  mathdoku-designer-ui-25461b729040ec3b_bg.wasm  mathdoku-designer-ui-2bb935b662c0642a_bg.wasm  mathdoku-designer-ui-8e1e2ab36e410338.js  mathdoku-designer-ui-8e1e2ab36e410338_bg.wasm  mathdoku-designer-ui-92af799867d0893b_bg.wasm  mathdoku-designer-ui-9c40f8b59e4ce706.js  mathdoku-designer-ui-9c40f8b59e4ce706_bg.wasm  mathdoku-designer-ui-9c9d09f554060b44.js  mathdoku-designer-ui-9c9d09f554060b44_bg.wasm  mathdoku-designer-ui-9d60ed54e3896f5d.js  mathdoku-designer-ui-9d60ed54e3896f5d_bg.wasm  mathdoku-designer-ui-a65c2c384f7868d4.js  mathdoku-designer-ui-a65c2c384f7868d4_bg.wasm  mathdoku-designer-ui-d0b71a8a4bd85e71_bg.wasm  mathdoku-designer-ui-dd91389f8ed6bb16_bg.wasm  mathdoku-designer-ui-e03bc7ab6ce25eb6_bg.wasm  mathdoku-designer-ui-ecb578db074462fd.js  (+6 more)
(+103 files in other folders)
