[package]
name = "mathdoku-designer-ui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
# WASM-everything web/preview build. With this feature the puzzle-state IPC
# wrappers in `src/ipc.rs` run in-process against `mathdoku-designer-core`
# (state parked in a thread-local — see `src/web_state.rs`) instead of crossing
# the Tauri command bus, so the editor works on a plain browser preview with no
# Tauri runtime. The Trunk build for previews passes `--features web`; the Tauri
# build omits it and keeps going through `raw_invoke`.
web = ["dep:rand"]

[dependencies]
mathdoku-designer-core = { path = "core" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlSelectElement", "NodeList", "CssStyleDeclaration", "SvgElement"] }
mathdoku = { path = "../../mathdoku" }
# Enables the `wasm_js` backend for getrandom (pulled in transitively by
# `mathdoku`'s `rand` dep). Without this feature `getrandom` refuses to
# compile on wasm32-unknown-unknown.
getrandom = { version = "0.4", features = ["wasm_js"] }
# Only the `web` build needs an RNG of its own: `new_latin_square` runs core
# directly and feeds it `rand::rng()`. The Tauri build leaves RNG to the backend.
rand = { version = "0.10.1", optional = true }

[dev-dependencies]
# Drives the `#[cfg(feature = "web")]` AppState-store tests in `src/web_state.rs`
# under a wasm test runner.
wasm-bindgen-test = "0.3"

[lints]
workspace = true
