[package]
name = "mathdoku-designer-core"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
# Without-Solution authoring mode: the `new_empty` / `fix` / `unfix` command
# bodies and the Without-Solution `State` constructor. Off by default; enable
# with `--features without-solution`.
without-solution = ["mathdoku/without-solution"]

# Exports the `test_support` module of shared test fixtures so downstream
# crates (the UI and Tauri shells) can use it in their tests. The module is
# always compiled for this crate's own unit tests.
test-support = []

[dependencies]
mathdoku = { path = "../../../mathdoku" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
thiserror = "2"

[dev-dependencies]
proptest = "1"

# On wasm, getrandom (pulled in transitively by `mathdoku`'s `rand` dep) needs
# its `wasm_js` backend; without this feature it refuses to compile for
# wasm32-unknown-unknown. Native targets are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
